[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/ParseAndChooseLevel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MapEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Icons/MouseScrollWheel.png" type="Texture" id=3]
[ext_resource path="res://Icons/MouseRightClick.png" type="Texture" id=4]
[ext_resource path="res://Icons/MouseLeftClick.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.145098, 0.141176, 0.160784, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ParseAndChooseLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="LoadingStatusContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingStatusLabel" type="Label" parent="LoadingStatusContainer"]
margin_left = 460.0
margin_top = 293.0
margin_right = 563.0
margin_bottom = 307.0
text = "Finding Levels..."

[node name="RoomSelectContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="RoomSelectContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0
custom_styles/tab_fg = SubResource( 1 )

[node name="Game Map" type="Control" parent="RoomSelectContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="RoomSelectContainer/TabContainer/Game Map"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 24.0
custom_constants/margin_bottom = 4

[node name="ChangeModPackageButton" type="Button" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MarginContainer"]
margin_right = 1000.0
margin_bottom = 20.0
text = "Mod Package: Test"

[node name="MapRoomListSplitContainer" type="HSplitContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer"]
margin_top = 28.0
margin_right = 1000.0
margin_bottom = 548.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapContainer" type="PanelContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer"]
margin_right = 494.0
margin_bottom = 520.0
rect_clip_content = true
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="MapEdit" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer" instance=ExtResource( 2 )]

[node name="CenterContainer" type="CenterContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer"]
margin_top = 479.0
margin_right = 494.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer"]
margin_left = 105.0
margin_right = 388.0
margin_bottom = 41.0
size_flags_horizontal = 4
custom_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer"]
margin_right = 283.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.145098, 0.141176, 0.160784, 0.643137 )

[node name="MarginContainer" type="MarginContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer"]
margin_right = 283.0
margin_bottom = 33.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Control" type="GridContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 279.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 0
columns = 6

[node name="LeftMouseTexture" type="TextureRect" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_right = 16.0
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMouseLabel" type="Label" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 20.0
margin_top = 5.0
margin_right = 112.0
margin_bottom = 19.0
text = "Select Room   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WheelTexture" type="TextureRect" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 116.0
margin_right = 132.0
margin_bottom = 25.0
texture = ExtResource( 3 )

[node name="WheelLabel" type="Label" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 136.0
margin_top = 5.0
margin_right = 185.0
margin_bottom = 19.0
text = "Zoom   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMouseTexture" type="TextureRect" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 189.0
margin_right = 205.0
margin_bottom = 25.0
texture = ExtResource( 4 )

[node name="RightMouseLabel2" type="Label" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/MapContainer/CenterContainer/MarginContainer/MarginContainer/Control"]
margin_left = 209.0
margin_top = 5.0
margin_right = 275.0
margin_bottom = 19.0
text = "Move Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PackageNameSelectContainer" type="VBoxContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer"]
margin_left = 506.0
margin_right = 1000.0
margin_bottom = 520.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer"]
margin_right = 494.0
margin_bottom = 24.0
columns = 2

[node name="SearchLevelNameEdit" type="LineEdit" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer/GridContainer"]
margin_right = 446.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Filter rooms..."

[node name="SearchLevelNameClearButton" type="Button" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer/GridContainer"]
margin_left = 450.0
margin_right = 494.0
margin_bottom = 24.0
text = "Clear"

[node name="LevelNameList" type="ItemList" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer"]
margin_top = 28.0
margin_right = 494.0
margin_bottom = 496.0
size_flags_vertical = 3
items = [ "m04ASD_000", null, false ]

[node name="VBoxContainer" type="VBoxContainer" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer"]
margin_top = 500.0
margin_right = 494.0
margin_bottom = 520.0

[node name="EditSelectedRoomButton" type="Button" parent="RoomSelectContainer/TabContainer/Game Map/VBoxContainer/MapRoomListSplitContainer/PackageNameSelectContainer/VBoxContainer"]
margin_right = 494.0
margin_bottom = 20.0
text = "Edit Room"
